Change Nextcloud image tag to 'beta'

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   nextcloud-aio-mastercontainer:
-    image: ghcr.io/nextcloud-releases/all-in-one:latest
+    image: ghcr.io/nextcloud-releases/all-in-one:beta
     init: true
     restart: always
     container_name: nextcloud-aio-mastercontainer
