--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,42 +1,39 @@
 services:
   nextcloud-aio-mastercontainer:
     image: ghcr.io/nextcloud-releases/all-in-one:beta
-    container_name: nextcloud-aio-mastercontainer
-    restart: always
     init: true
+    restart: always
+    container_name: nextcloud-aio-mastercontainer
     volumes:
       - nextcloud_aio_mastercontainer:/mnt/docker-aio-config
       - /var/run/docker.sock:/var/run/docker.sock:ro
-    networks:
-      - nextcloud-net
+    network_mode: bridge
+    ports:
+      - 8080:8080
     environment:
       APACHE_PORT: 11000
-      APACHE_IP_BINDING: 0.0.0.0   # bind Apache to all interfaces inside container
+      APACHE_IP_BINDING: 127.0.0.1
       SKIP_DOMAIN_VALIDATION: true
 
   caddy:
     image: caddy:alpine
-    container_name: caddy
     restart: always
+    container_name: caddy
     volumes:
       - caddy_certs:/certs
       - caddy_config:/config
       - caddy_data:/data
       - caddy_sites:/srv
-    networks:
-      - nextcloud-net
-    ports:
-      - 443:443   # expose HTTPS to the outside world
+    network_mode: 'host'
     configs:
       - source: Caddyfile
         target: /etc/caddy/Caddyfile
-
 configs:
   Caddyfile:
     content: |
-      https://cloud.internal {
-          tls internal
-          reverse_proxy nextcloud-aio-mastercontainer:11000
+      https://cloud.internal:443 {
+        tls internal
+        reverse_proxy localhost:11000
       }
 
 volumes:
@@ -46,7 +43,3 @@ volumes:
   caddy_config:
   caddy_data:
   caddy_sites:
-
-networks:
-  nextcloud-net:
-    driver: bridge
