--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
     networks:
       - nextcloud-aio
     ports:
-      - 0.0.0.0:8080:8080
+      - 8080:8080
     environment:
       APACHE_PORT: 11000
       APACHE_IP_BINDING: 127.0.0.1
@@ -34,7 +34,7 @@ configs:
     content: |
       https://cloud.internal:443 {
         tls internal
-        reverse_proxy localhost:11000
+        reverse_proxy 127.0.0.1:11000
       }
 
 volumes:
