--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
 
   portainer:
     container_name: portainer
-    image: portainer/portainer-ce:lts
+    image: portainer/portainer-ce:2.20.2 # Temporary downgrade due to bug https://github.com/orgs/portainer/discussions/12926
     restart: always
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
