--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,36 @@
 services:
-  nextcloud:
-    image: lscr.io/linuxserver/nextcloud:latest
-    container_name: nextcloud
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Etc/UTC
-    volumes:
-      - /srv/docker_data/nextcloud/config:/config
-      - /srv/docker_data/nextcloud/data:/data
-    ports:
-      - 443:443
+
+  nextcloud-db:
+    image: mariadb:10.6
     restart: always
+    command: --transaction-isolation=READ-COMMITTED --log-bin=binlog --binlog-format=ROW
+    volumes:
+      - /srv/docker_data/nextcloud_db:/var/lib/mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD_FILE=/run/secrets/nextcloud_db_mysql_root_password
+      - MYSQL_PASSWORD_FILE=/run/secrets/nextcloud_db_mysql_password
+      - MYSQL_DATABASE=nextcloud
+      - MYSQL_USER=nextcloud
+    secrets:
+      - nextcloud_db_mysql_root_password
+      - nextcloud_db_mysql_password
+  
+  nextcloud:
+    image: nextcloud
+    restart: always
+    ports:
+      - 80:80
+    links:
+      - db
+    volumes:
+      - /srv/docker_data/nextcloud:/var/www/html
+    environment:
+      - MYSQL_PASSWORD_FILE=/run/secrets/nextcloud_db_mysql_password
+      - MYSQL_DATABASE=nextcloud
+      - MYSQL_USER=nextcloud
+      - MYSQL_HOST=db
+    secrets:
+      - nextcloud_db_mysql_password
 
   portainer:
     container_name: portainer
@@ -22,4 +41,10 @@ services:
       - /srv/docker_data/portainer:/data
     ports:
       - 9443:9443
+
+secrets:
+  nextcloud_db_mysql_root_password:
+    file: /srv/docker_secrets/nextcloud_db_mysql_root_password.txt
+  nextcloud_db_mysql_password:
+    file: /srv/docker_secrets/nextcloud_db_mysql_password.txt
 
