--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,10 +9,10 @@ services:
     env_file:
       - /srv/docker_secrets/secrets.env
     environment:
-      - MYSQL_ROOT_PASSWORD=${NEXTCLOUD_DB_MYSQL_ROOT_PASSWORD}
-      - MYSQL_PASSWORD=${NEXTCLOUD_DB_MYSQL_PASSWORD}
-      - MYSQL_DATABASE=nextcloud
-      - MYSQL_USER=nextcloud
+      - MARIADB_ROOT_PASSWORD=${NEXTCLOUD_DB_MYSQL_ROOT_PASSWORD}
+      - MARIADB_PASSWORD=${NEXTCLOUD_DB_MYSQL_PASSWORD}
+      - MARIADB_DATABASE=nextcloud
+      - MARIADB_USER=nextcloud
   
   nextcloud:
     image: nextcloud
