--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,13 +6,11 @@ services:
     command: --transaction-isolation=READ-COMMITTED --log-bin=binlog --binlog-format=ROW
     volumes:
       - /srv/docker_data/nextcloud_db:/var/lib/mysql
-    env_file:
-      - /srv/docker_secrets/secrets.env
     environment:
-      - MARIADB_ROOT_PASSWORD= ${NEXTCLOUD_DB_MYSQL_ROOT_PASSWORD}
-      - MARIADB_PASSWORD= ${NEXTCLOUD_DB_MYSQL_PASSWORD}
-      - MARIADB_DATABASE=nextcloud
-      - MARIADB_USER=nextcloud
+      - MYSQL_ROOT_PASSWORD=${NEXTCLOUD_DB_MYSQL_ROOT_PASSWORD}
+      - MYSQL_PASSWORD=${NEXTCLOUD_DB_MYSQL_PASSWORD}
+      - MYSQL_DATABASE=nextcloud
+      - MYSQL_USER=nextcloud
   
   nextcloud:
     image: nextcloud
@@ -23,12 +21,10 @@ services:
       - nextcloud-db
     volumes:
       - /srv/docker_data/nextcloud:/var/www/html
-    env_file:
-      - /srv/docker_secrets/secrets.env
     environment:
       - NEXTCLOUD_ADMIN_USER=admin
-      - NEXTCLOUD_ADMIN_PASSWORD= ${NEXTCLOUD_ADMIN_PASSWORD}
-      - MYSQL_PASSWORD= ${NEXTCLOUD_DB_MYSQL_PASSWORD}
+      - NEXTCLOUD_ADMIN_PASSWORD=${NEXTCLOUD_ADMIN_PASSWORD}
+      - MYSQL_PASSWORD=${NEXTCLOUD_DB_MYSQL_PASSWORD}
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
       - MYSQL_HOST=nextcloud-db
