--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,12 +11,12 @@ services:
       - MYSQL_PASSWORD=${NEXTCLOUD_DB_MYSQL_PASSWORD}
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
+    networks:
+      - nextcloud-net
      
   nextcloud:
     image: nextcloud
     restart: always
-    links:
-      - nextcloud-db
     volumes:
       - /srv/docker_data/nextcloud:/var/www/html
     environment:
