--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
       - MYSQL_USER=nextcloud
       - MYSQL_HOST=nextcloud-db
     extra_hosts:
-      - "cloud.internal:127.0.0.1"
+      - "cloud.internal:172.20.0.10"
     networks:
       - nextcloud-net
 
@@ -45,7 +45,8 @@ services:
       - source: Caddyfile
         target: /etc/caddy/Caddyfile
     networks:
-      - nextcloud-net
+      nextcloud-net:
+        ipv4_address: 172.20.0.10
 
   portainer:
     container_name: portainer
@@ -71,6 +72,10 @@ configs:
 networks:
   nextcloud-net:
     driver: bridge
+    ipam:
+      config:
+        - subnet: 172.20.0.0/16
+    
 
 
 
