--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -66,7 +66,7 @@ configs:
         reverse_proxy nextcloud:80
       }
       http://cloud.internal:80 {
-        redir https://cloud.internal{uri}
+        reverse_proxy nextcloud:80
       }
 
 networks:
