--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,7 @@ services:
       - MYSQL_HOST=nextcloud-db
     extra_hosts:
       - "cloud.internal:172.20.0.10"
+      - "collabora.cloud.internal:172.20.0.10"
     networks:
       - nextcloud-net
 
