--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,7 +27,7 @@ services:
       - MYSQL_HOST=nextcloud-db
     extra_hosts:
       - "cloud.internal:172.20.0.10"
-      - "collabora.cloud.internal:172.20.0.10"
+      - "collabora.cloud.internal:172.20.0.11"
     networks:
       - nextcloud-net
 
@@ -40,8 +40,11 @@ services:
       - aliasgroup1=https://cloud.internal:443
       - server_name=collabora.cloud.internal
       - extra_params=--o:ssl.enable=true
+    ports:
+      - 9980:9980
     networks:
-      - nextcloud-net
+      nextcloud-net:
+        ipv4_address: 172.20.0.11
 
   nextcloud-proxy:
     image: caddy:alpine
@@ -80,9 +83,6 @@ configs:
       }
       http://cloud.internal:80 {
         reverse_proxy nextcloud:80
-      }
-      https://collabora.cloud.internal:443 {
-        reverse_proxy nextcloud-collabora:9980
       }
 
 networks:
