--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,7 +27,7 @@ services:
       - MYSQL_HOST=nextcloud-db
     extra_hosts:
       - "cloud.internal:172.20.0.10"
-      - "collabora.cloud.internal:172.20.0.11"
+      - "collabora.cloud.internal:172.20.0.10"
     networks:
       - nextcloud-net
 
@@ -43,8 +43,7 @@ services:
     ports:
       - 9980:9980
     networks:
-      nextcloud-net:
-        ipv4_address: 172.20.0.11
+      - nextcloud-net
 
   nextcloud-proxy:
     image: caddy:alpine
@@ -83,6 +82,9 @@ configs:
       }
       http://cloud.internal:80 {
         reverse_proxy nextcloud:80
+      }
+      https://collabora.cloud.internal:443 {
+        reverse_proxy nextcloud-collabora:9980
       }
 
 networks:
