--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -84,8 +84,17 @@ configs:
       http://cloud.internal:80 {
         reverse_proxy nextcloud:80
       }
-      https://collabora.cloud.internal:443 {
-        reverse_proxy nextcloud-collabora:9980
+      https://collabora.cloud.internal {
+        reverse_proxy nextcloud-collabora:9980 {
+          transport http {
+            tls_insecure_skip_verify
+          }
+      
+          header_up X-Forwarded-For {remote_host}
+          header_up X-Forwarded-Host {host}
+          header_up X-Forwarded-Proto {scheme}
+          header_up Host {host}
+        }
       }
 
 networks:
