--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,6 +42,9 @@ services:
       - aliasgroup3=https://cloud.internal:443
       - aliasgroup4=https://collabora.cloud.internal:443
       - server_name=collabora.cloud.internal
+    extra_hosts:
+      - "cloud.internal:172.20.0.10"
+      - "collabora.cloud.internal:172.20.0.10"
     networks:
       - nextcloud-net
 
