--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,6 +42,7 @@ services:
       - aliasgroup3=https://cloud.internal:443
       - aliasgroup4=https://collabora.cloud.internal:443
       - server_name=collabora.cloud.internal
+      - extra_params=--o:ssl.enable=true
     extra_hosts:
       - "cloud.internal:172.20.0.10"
       - "collabora.cloud.internal:172.20.0.10"
