--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,7 +42,6 @@ services:
       - aliasgroup3=https://cloud.internal:443
       - aliasgroup4=https://collabora.cloud.internal:443
       - server_name=collabora.cloud.internal
-      - extra_params=--o:ssl.enable=true
     extra_hosts:
       - "cloud.internal:172.20.0.10"
       - "collabora.cloud.internal:172.20.0.10"
@@ -85,14 +84,13 @@ configs:
         reverse_proxy nextcloud:80
       }
       http://cloud.internal:80 {
-        reverse_proxy nextcloud:80
+        redir https://cloud.internal{uri}
       }
       https://collabora.cloud.internal {
         reverse_proxy nextcloud-collabora:9980 {
           transport http {
             tls_insecure_skip_verify
           }
-      
           header_up X-Forwarded-For {remote_host}
           header_up X-Forwarded-Host {host}
           header_up X-Forwarded-Proto {scheme}
