--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -91,7 +91,7 @@ services:
       nextcloud-net:
         ipv4_address: 172.20.0.10
       vpn-net:
-        ipv4_addresss: 10.8.0.10
+        ipv4_address: 10.8.0.10
 
   portainer:
     container_name: portainer
