--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,14 +15,25 @@ services:
       - SERVERPORT=51820
       - ALLOWEDIPS=10.8.0.0/24 # 10.8.0.0 - 10.8.0.255
     volumes:
-      - /srv/docker_data/wireguard/config:/config
+      - /srv/docker_data/wireguard/config:/config/wg_confs
       - /lib/modules:/lib/modules
     ports:
       - 51820:51820/udp
+      - 8888:8888/tcp
     sysctls:
       - net.ipv4.conf.all.src_valid_mark=1
     networks:
       - vpn-net
+
+    wireguard-portal:
+      image: wgportal/wg-portal:v2
+      cap_add:
+        - NET_ADMIN
+      network_mode: "service:wireguard"
+      volumnes:
+        - /srv/docker_data/wireguard/config:/etc/wireguard
+        - /srv/docker_data/wireguard_portal/data:/app/data
+        - /srv/docker_data/wireguard_portal/config:/app/config
 
   nextcloud-db:
     image: mariadb:10.6
