--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
     cap_add:
       - NET_ADMIN
     network_mode: "service:wireguard"
-    volumnes:
+    volumes:
       - /srv/docker_data/wireguard/config:/etc/wireguard
       - /srv/docker_data/wireguard_portal/data:/app/data
       - /srv/docker_data/wireguard_portal/config:/app/config
