--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -117,7 +117,7 @@ configs:
     content: |
       https://cloud.internal:443 {
         tls internal
-        reverse_proxy wireguard-portal:8888
+        reverse_proxy wireguard-vpn:8888
       }
       http://cloud.internal:80 {
         @internal {
