--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
 
   wireguard-vpn:
-    image: ghcr.io/wg-easy/wg-easy
+    image: ghcr.io/wg-easy/wg-easy:15
     restart: always
     volumes:
       - /srv/docker_data/wireguard:/etc/wireguard
