--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,29 @@
 services:
 
-  wireguard-vpn:
+  wg-easy:
     image: ghcr.io/wg-easy/wg-easy:15
-    restart: always
+    container_name: wg-easy
+    networks:
+      wg:
+        ipv4_address: 10.42.42.42
+        ipv6_address: fdcc:ad94:bacf:61a3::2a
     volumes:
-      - /srv/docker_data/wireguard:/etc/wireguard
+      - etc_wireguard:/etc/wireguard
       - /lib/modules:/lib/modules:ro
-    environment:
-      - INSECURE=true
     ports:
-      - 51820:51820/udp
-      - 51821:51821
+      - "51820:51820/udp"
+      - "51821:51821/tcp"
+    restart: unless-stopped
     cap_add:
       - NET_ADMIN
       - SYS_MODULE
+      # - NET_RAW # ⚠️ Uncomment if using Podman
     sysctls:
+      - net.ipv4.ip_forward=1
       - net.ipv4.conf.all.src_valid_mark=1
-    networks:
-      vpn-net:
-        ipv4_address: 10.8.0.2
+      - net.ipv6.conf.all.disable_ipv6=0
+      - net.ipv6.conf.all.forwarding=1
+      - net.ipv6.conf.default.forwarding=1
 
   nextcloud-db:
     image: mariadb:10.6
@@ -131,6 +136,14 @@ configs:
       }
 
 networks:
+  wg:
+    driver: bridge
+    enable_ipv6: true
+    ipam:
+      driver: default
+      config:
+        - subnet: 10.42.42.0/24
+        - subnet: fdcc:ad94:bacf:61a3::/64
   vpn-net:
     driver: bridge
     ipam:
