--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,9 +4,8 @@ services:
     image: ghcr.io/wg-easy/wg-easy:15
     container_name: wg-easy
     networks:
-      wg:
+      vpn-net:
         ipv4_address: 10.42.42.42
-        ipv6_address: fdcc:ad94:bacf:61a3::2a
     volumes:
       - /srv/docker_data/wireguard:/etc/wireguard
       - /lib/modules:/lib/modules:ro
@@ -21,9 +20,6 @@ services:
     sysctls:
       - net.ipv4.ip_forward=1
       - net.ipv4.conf.all.src_valid_mark=1
-      - net.ipv6.conf.all.disable_ipv6=0
-      - net.ipv6.conf.all.forwarding=1
-      - net.ipv6.conf.default.forwarding=1
 
   nextcloud-db:
     image: mariadb:10.6
@@ -136,14 +132,6 @@ configs:
       }
 
 networks:
-  wg:
-    driver: bridge
-    enable_ipv6: true
-    ipam:
-      driver: default
-      config:
-        - subnet: 10.42.42.0/24
-        - subnet: fdcc:ad94:bacf:61a3::/64
   vpn-net:
     driver: bridge
     ipam:
