--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,8 @@ services:
     container_name: wg-easy
     networks:
       vpn-net:
-        ipv4_address: 10.8.0.8
+        ipv4_address: 10.42.42.42
+        ipv6_address: fdcc:ad94:bacf:61a3::2a
     volumes:
       - /srv/docker_data/wireguard:/etc/wireguard
       - /lib/modules:/lib/modules:ro
@@ -20,6 +21,9 @@ services:
     sysctls:
       - net.ipv4.ip_forward=1
       - net.ipv4.conf.all.src_valid_mark=1
+      - net.ipv6.conf.all.disable_ipv6=0
+      - net.ipv6.conf.all.forwarding=1
+      - net.ipv6.conf.default.forwarding=1
 
   nextcloud-db:
     image: mariadb:10.6
@@ -134,10 +138,12 @@ configs:
 networks:
   vpn-net:
     driver: bridge
+    enable_ipv6: true
     ipam:
       driver: default
       config:
-        - subnet: 10.8.0.0/24
+        - subnet: 10.42.42.0/24
+        - subnet: fdcc:ad94:bacf:61a3::/64
         
   nextcloud-net:
     driver: bridge
