--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,7 @@
 services:
 
-  wg-easy:
+  wireguard-vpn:
     image: ghcr.io/wg-easy/wg-easy:15
-    container_name: wg-easy
     networks:
       vpn-net:
         ipv4_address: 10.8.0.8
@@ -12,11 +11,10 @@ services:
     ports:
       - "51820:51820/udp"
       - "51821:51821/tcp"
-    restart: unless-stopped
+    restart: always
     cap_add:
       - NET_ADMIN
       - SYS_MODULE
-      # - NET_RAW # ⚠️ Uncomment if using Podman
     sysctls:
       - net.ipv4.ip_forward=1
       - net.ipv4.conf.all.src_valid_mark=1
