--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,17 @@
 services:
 
   wireguard-vpn:
-    image: wgportal/wg-portal:v2
+    image: ghcr.io/wgdashboard/wgdashboard:latest
+    restart: always
+    ports:
+      - 10086:10086/tcp
+      - 51820:51820/udp
+    volumes:
+      - /srv/docker_data/wireguard/aconf:/etc/amnezia/amneziawg
+      - /srv/docker_data/wireguard/wireguard:/etc/wireguard
+      - /srv/docker_data/wireguard/data:/data
     cap_add:
       - NET_ADMIN
-    ports:
-      - 51820:51820/udp
-      - 8888:8888/tcp
-    sysctls:
-      - net.ipv4.conf.all.src_valid_mark=1
-    volumes:
-      - /srv/docker_data/wireguard/data:/app/data
-      - /srv/docker_data/wireguard/config:/app/config
 
   nextcloud-db:
     image: mariadb:10.6
