--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,8 +11,8 @@ services:
       - /srv/docker_data/wireguard/wireguard:/etc/wireguard
       - /srv/docker_data/wireguard/data:/data
     environment:
-      - USERNAME=admin
-      - PASSWORD=${WIREGUARD_DASHBOARD_PASSWORD}
+      - username=admin
+      - password=${WIREGUARD_DASHBOARD_PASSWORD}
     cap_add:
       - NET_ADMIN
 
