--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,9 @@ services:
       - password=${WIREGUARD_DASHBOARD_PASSWORD}
     cap_add:
       - NET_ADMIN
+    networks:
+      vpn-net:
+        ipv4_address: 10.8.0.2
 
   nextcloud-db:
     image: mariadb:10.6
@@ -82,6 +85,8 @@ services:
     networks:
       nextcloud-net:
         ipv4_address: 172.20.0.10
+      vpn-net:
+        ipv4_address: 10.8.0.3
 
   portainer:
     container_name: portainer
@@ -125,6 +130,11 @@ configs:
       }
 
 networks:
+  vpn-net:
+    ipam:
+      config:
+        - subnet: 10.8.0.0/24
+        
   nextcloud-net:
     driver: bridge
     ipam:
