--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -75,7 +75,7 @@ services:
       - /srv/docker_data/caddy/config:/config
       - /srv/docker_data/caddy/data:/data
       - /srv/docker_data/caddy/srv:/srv
-      - ./Nextcloud_Caddyfile:/etc/caddy/Caddyfile
+      - ./nextcloud.Caddyfile:/etc/caddy/Caddyfile
     networks:
       nextcloud-net:
         ipv4_address: 172.20.0.10
