--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -75,7 +75,7 @@ services:
       - /srv/docker_data/nextcloud_proxy_caddy/config:/config
       - /srv/docker_data/nextcloud_proxy_caddy/data:/data
       - /srv/docker_data/nextcloud_proxy_caddy/srv:/srv
-      - ./nextcloud.Caddyfile:/etc/caddy/Caddyfile
+      - ./nextcloud_proxy.Caddyfile:/etc/caddy/Caddyfile
     networks:
       nextcloud-net:
         ipv4_address: 172.20.0.10
