--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -82,6 +82,20 @@ services:
       vpn-net:
         ipv4_address: 10.8.0.3
 
+  admin-tools-proxy:
+    image: caddy:alpine
+    restart: always
+    volumes:
+      - /srv/docker_data/nextcloud_proxy_caddy/certs:/certs
+      - /srv/docker_data/nextcloud_proxy_caddy/config:/config
+      - /srv/docker_data/nextcloud_proxy_caddy/data:/data
+      - /srv/docker_data/nextcloud_proxy_caddy/srv:/srv
+      - ./admin_tools_proxy.Caddyfile:/etc/caddy/Caddyfile
+    networks:
+      admin-tools-net
+      vpn-net:
+        ipv4_address: 10.8.0.3
+
   portainer:
     container_name: portainer
     image: portainer/portainer-ce:2.20.2 # Temporary downgrade due to bug https://github.com/orgs/portainer/discussions/12926
@@ -103,4 +117,9 @@ networks:
     ipam:
       config:
         - subnet: 172.20.0.0/24
+
+  admin-tools-net:
+    ipam:
+      config:
+        - subnet: 172.30.0.0/24
     
