--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,22 +1,17 @@
 services:
 
   wireguard-vpn:
-    image: ghcr.io/wgdashboard/wgdashboard:latest
-    restart: always
-    ports:
-      - 51820:51820/udp
-    volumes:
-      - /srv/docker_data/wireguard/aconf:/etc/amnezia/amneziawg
-      - /srv/docker_data/wireguard/wireguard:/etc/wireguard
-      - /srv/docker_data/wireguard/data:/data
-    environment:
-      - username=admin
-      - password=${WIREGUARD_DASHBOARD_PASSWORD}
+    image: wgportal/wg-portal:v2
     cap_add:
       - NET_ADMIN
-    networks:
-      vpn-net:
-        ipv4_address: 10.8.0.2
+    ports:
+      - "51820:51820/udp" 
+      - "8888:8888/tcp"
+    sysctls:
+      - net.ipv4.conf.all.src_valid_mark=1
+    volumes:
+      - /srv/docker_data/wg_portal/data:/app/data
+      - /srv/docker_data/wg_portal/config:/app/config
 
   nextcloud-db:
     image: mariadb:10.6
