--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,11 +10,13 @@ services:
     sysctls:
       - net.ipv4.conf.all.src_valid_mark=1
     environment:
-      - WG_PORTAL_CONFIG=/etc/wg-portal/config.yaml
+      - WG_PORTAL_WEB_EXTERNAL_URL=http://49.13.87.41:8888
+      - WG_PORTAL_CORE_ADMIN_USER=admin-service-user
+      - WG_PORTAL_CORE_ADMIN_PASSWORD=${WIREGUARD_PORTAL_ADMIN_SERVICE_USER_PASSWORD}
+      - WG_PORTAL_CORE_ADMIN_API_TOKEN=${WIREGUARD_PORTAL_ADMIN_API_TOKEN}
     volumes:
       - /srv/docker_data/wg_portal/data:/app/data
       - /srv/docker_data/wg_portal/config:/app/config
-      - ./wireguard_config.yaml:/etc/wg-portal/config.yaml:ro
     networks:
       - vpn-net
 
