--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,8 @@ services:
       - net.ipv4.conf.all.src_valid_mark=1
     environment:
        - WG_PORTAL_CONFIG=/etc/wg-portal/config.yaml
+       - WIREGUARD_PORTAL_ADMIN_SERVICE_USER_PASSWORD=${WIREGUARD_PORTAL_ADMIN_SERVICE_USER_PASSWORD}
+       - WIREGUARD_PORTAL_ADMIN_API_TOKEN=${WIREGUARD_PORTAL_ADMIN_API_TOKEN}
     volumes:
       - /srv/docker_data/wg_portal/:/app/data
       - ./config/wireguard/wgportal_config.yaml:/etc/wg-portal/config.yaml:ro
