--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -69,15 +69,15 @@ services:
     networks:
       - nextcloud-net
 
-  nextcloud-proxy:
+  master-proxy:
     image: caddy:alpine
     restart: always
     volumes:
-      - /srv/docker_data/nextcloud_proxy_caddy/certs:/certs
-      - /srv/docker_data/nextcloud_proxy_caddy/config:/config
-      - /srv/docker_data/nextcloud_proxy_caddy/data:/data
-      - /srv/docker_data/nextcloud_proxy_caddy/srv:/srv
-      - ./nextcloud_proxy.Caddyfile:/etc/caddy/Caddyfile:ro
+      - /srv/docker_data/master_proxy_caddy/certs:/certs
+      - /srv/docker_data/master_proxy_caddy/config:/config
+      - /srv/docker_data/master_proxy_caddy/data:/data
+      - /srv/docker_data/master_proxy_caddy/srv:/srv
+      - ./Caddyfile:/etc/caddy/Caddyfile:ro
     networks:
       admin-tools-net:
       nextcloud-net:
