--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,9 @@ services:
       - /srv/docker_data/wg_portal/:/app/data
       - ./config/wireguard/wgportal_config.yaml:/etc/wg-portal/config.yaml:ro
     networks:
-      - vpn-net
+      vpn-net:
+      admin-tools-net:
+        ipv4_address: 172.21.0.2
 
   nextcloud-db:
     image: mariadb:10.6
