--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
        - WIREGUARD_PORTAL_ADMIN_API_TOKEN=${WIREGUARD_PORTAL_ADMIN_API_TOKEN}
     volumes:
       - /srv/docker_data/wg_portal/:/app/data
-      - ./config/wireguard/wgportal_config.yaml:/etc/wg-portal/config.yaml:ro
+      - ./config/wgportal_config.yaml:/etc/wg-portal/config.yaml:ro
     networks:
       vpn-net:
       admin-tools-net:
