--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,9 @@
 services:
 
-  wireguard-vpn:
-    container_name: wireguard-vpn
+  wireguard-vpn-server:
+    container_name: wireguard-vpn-server
     image: wgportal/wg-portal:v2
+    restart: always
     cap_add:
       - NET_ADMIN
     ports:
@@ -14,12 +15,29 @@ services:
        - WIREGUARD_PORTAL_ADMIN_PASSWORD=${WIREGUARD_PORTAL_ADMIN_PASSWORD}
        - WIREGUARD_PORTAL_ADMIN_API_TOKEN=${WIREGUARD_PORTAL_ADMIN_API_TOKEN}
     volumes:
-      - /srv/docker_data/wg_portal/:/app/data
-      - ./config/wgportal_config.yaml:/etc/wg-portal/config.yaml:ro
+      - /srv/docker_data/wireguard_vpn_server/:/app/data
+      - ./config/wireguard_server_conf:/etc/wg-portal/config.yaml:ro
     networks:
       vpn-net:
       admin-tools-net:
         ipv4_address: 172.21.0.10
+
+  wireguard-vpn-second-hop:
+    image: lscr.io/linuxserver/wireguard:latest
+    restart: always
+    container_name: wireguard-vpn-second-hop
+    cap_add:
+      - NET_ADMIN
+      - SYS_MODULE
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Etc/UTC
+    volumes:
+      - /srv/docker_data/wireguard_vpn_second_hop:/config
+      - /lib/modules:/lib/modules:ro
+    sysctls:
+      - net.ipv4.conf.all.src_valid_mark=1
 
   nextcloud-db:
     image: mariadb:10.6
