--- a/config/wireguard_server_conf.yaml
+++ b/config/wireguard_server_conf.yaml
@@ -4,5 +4,5 @@ core:
   admin_api_token: ${WIREGUARD_PORTAL_ADMIN_API_TOKEN}
 
 web:
-  external_url: https://vpn.admin.internal
+  external_url: http://49.13.87.41:8888
   listening_address: 172.21.0.10:8888
