--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,16 +28,15 @@ services:
     container_name: wireguard-vpn-second-hop
     cap_add:
       - NET_ADMIN
-      - SYS_MODULE
     environment:
       - PUID=1000
       - PGID=1000
       - TZ=Etc/UTC
     volumes:
       - /srv/docker_data/wireguard_vpn_second_hop:/config
-      - /lib/modules:/lib/modules:ro
     sysctls:
       - net.ipv4.conf.all.src_valid_mark=1
+    network_mode: "service:wireguard-vpn-server"
 
   nextcloud-db:
     image: mariadb:10.6
