--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
       - 8888:8888
     sysctls:
       - net.ipv4.conf.all.src_valid_mark=1
+      - net.ipv4.ip_forward=1
     environment:
        - WG_PORTAL_CONFIG=/etc/wg-portal/config.yaml
        - WIREGUARD_PORTAL_ADMIN_PASSWORD=${WIREGUARD_PORTAL_ADMIN_PASSWORD}
