--- a/multi_vpn_test/docker-compose.yaml
+++ b/multi_vpn_test/docker-compose.yaml
@@ -1,13 +1,14 @@
 services:
-  
   vpn:
+    build: ./vpn
     container_name: vpn
-    image: debian:12-slim
     restart: always
     ports:
       - 51820:51820/udp
     sysctls:
-      - net.ipv4.conf.all.src_valid_mark=1
-      - net.ipv4.ip_forward=1
+      net.ipv4.conf.all.src_valid_mark: 1
+      net.ipv4.ip_forward: 1
     cap_add:
       - NET_ADMIN
+    volumes:
+      - /srv/docker_data/vpn_test:/etc/wireguard
